--- a/ImageParse.csproj
+++ b/ImageParse.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     
     <PackageId>ImageParse</PackageId>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
     <Authors>Carl Walsh and contributors</Authors>
     <Description>Library to help debug image parsing code</Description>
     <Copyright>Copyright (c) Carl Walsh and contributors.</Copyright>
